Mise à jour du Responsive

--- a/pendu.html
+++ b/pendu.html
@@ -25,6 +25,7 @@
     </div>
     <div class="outch"></div>
     <div class="start">Appuyez ici pour commencer le jeu</div>
+    <div class="mainScreen">
     <div class="container">
         
         <header>
@@ -36,6 +37,7 @@
         <div class="imageCentrale">
             <img class="maj" src="images/error/error0.png" alt="le pendu">
         </div>
+    </div>
 
     </div>
     <div class="container">
